[package]
name = "gobang"
version = "0.1.0-alpha.0"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/TaKO8Ki/gobang"
repository = "https://github.com/TaKO8Ki/gobang"
readme = "README.md"
description = "A cross-platform terminal database tool written in Rust"

[workspace]
members=[
    "database-tree"
]

[dependencies]
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
crossterm = "0.19"
anyhow = "1.0.38"
unicode-width = "0.1"
sqlx = { version = "0.4.1", features = ["mysql", "postgres", "chrono", "runtime-tokio-rustls", "decimal", "json"] }
chrono = "0.4"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
serde_json = "1.0"
serde = "1.0"
toml = "0.4"
regex = "1"
strum = "0.21"
strum_macros = "0.21"
database-tree = { path = "./database-tree", version = "0.1" }
easy-cast = "0.4"
copypasta = { version = "0.7.0", default-features = false }
async-trait = "0.1.50"
itertools = "0.10.0"
rust_decimal = "1.15"

[target.'cfg(all(target_family="unix",not(target_os="macos")))'.dependencies]
which = "4.1"
