[package]
name = "database-tree"
version = "0.1.2"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/TaKO8Ki/gobang"
repository = "https://github.com/TaKO8Ki/gobang"
readme = "README.md"
description = "A cross-platform terminal database tool written in Rust"

[dependencies]
thiserror = "1.0"
sqlx = { version = "0.4.1", features = ["mysql", "chrono", "runtime-tokio-rustls"] }
chrono = "0.4"
anyhow = "1.0.38"
