[package]
name = "database-tree"
version = "0.1.0-alpha.2"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/TaKO8Ki/gobang"
repository = "https://github.com/TaKO8Ki/gobang"
readme = "README.md"
description = "Database tree structure"

[dependencies]
thiserror = "1.0"
chrono = "0.4"
anyhow = "1.0.38"
